Playing with css and html

--- a/test2.html
+++ b/test2.html
@@ -3,41 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="master.css">
 </head>
 <body>
 
 </body>
-</html><!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>THIS IS THE 2ND ONE</title>
-    </head>
-
-    <body>
-    <ol>
+    <h1>New Header</h1>
+    <ol class="olone">
+        <p>ol One</p>
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
+        <li>First item</li>
+        <li>Second item</li>
+        <li>Third item</li>
         <li>First item</li>
         <li>Second item</li>
         <li>Third item</li>
     </ol>
 
     <ul>
+        <p>Ul List</p>
         <li>First item</li>
         <li>Second item</li>
         <li>Third item</li>
     </ul>
 
-    <ol>
+    <ol class="oltwo">
+        <p>Ol Two</p>
         <li>ITEM ONE</li>
         <li>ITEM TWO</li>
-        <ul>
-            <li>I am Nested</li>
-            <li>second nested item</li>
-            <ol>
-                <li>Woah, very nested!</li>
-            </ol>
-        </ul>
+        <li>I am Nested</li>
+        <li>second nested item</li>
+        <li>Woah, very nested!</li>
+        <li>Another one</li>
     </ol>
+
+    <p class="one">
+        This is the first one
+    </p>
+
+    <p class="two">This is the second one</p>
 
     </body>
 </html>
