Playing with css and html

--- a/test2.html
+++ b/test2.html
@@ -11,7 +11,7 @@
     <h1>New Header</h1>
     <ol class="olone">
         <p>ol One</p>
-        <li>First item</li>
+        <li>First item, nomenclature, unit of issue ... quantity</li>
         <li>Second item</li>
         <li>Third item</li>
         <li>First item</li>
@@ -55,10 +55,20 @@
     </ol>
 
     <p class="one">
-        This is the first one
+        This is going to be instruction on how to fill out the form
     </p>
 
-    <p class="two">This is the second one</p>
+    <p class="two">This is going to be some kind of warning about what not to do</p>
+
+
+    <form>
+    <h2>Please input your container name and person packing it</h2>
+
+    <input type="text" name="Container name" value="Container name">
+    <input type="text" name="" value="Person packing">
+    <input type="submit" name="" value="Generate">
+
+</form>
 
     </body>
 </html>
