--- a/html_files/test2.html
+++ b/html_files/test2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="../css_files/master.css">
 </head>
 <body>
 
