Added paragraphs to explain function. Made navigation bar position absolute

--- a/html_files/mutinta_position_test.html
+++ b/html_files/mutinta_position_test.html
@@ -10,6 +10,10 @@
 
     <div id="box3">
         <h1>BIG LETTERS AND SOMETHING ABOUT THE APP</h1>
+        <div id="paragraphs">
+            <p>This is going to be instruction on how to fill out the form. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <p>This is going to be some kind of warning about what not to do</p>
+        </div>
         <div id="box1">
             <p>Items to be printed</p>
             <ol>
